import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
  id 'application'
  id 'com.gradleup.shadow'
  id 'idea'
}

apply from: "$rootDir/gradle/java.gradle"

testJvmConstraints {
  minJavaVersion = JavaVersion.VERSION_25
}

description = 'JDK 25 Concurrent Integration Tests'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(25)
  }
}

idea {
  module {
    jdkName = '25'
  }
}

tasks.withType(JavaCompile).configureEach {
  configureCompiler(it, 25, JavaVersion.VERSION_25)
  options.compilerArgs.add("--enable-preview")
}

application {
  mainClass = 'datadog.smoketest.concurrent.ConcurrentApp'
}

dependencies {
  implementation group: 'io.opentelemetry.instrumentation', name: 'opentelemetry-instrumentation-annotations', version: '2.19.0'
  testImplementation project(':dd-smoke-tests')
  testImplementation libs.bundles.junit5
}

tasks.withType(Test).configureEach {
  def shadowJarTask = tasks.named('shadowJar', ShadowJar)
  dependsOn shadowJarTask
  environment("JAVA_HOME", getLazyJavaHomeFor(25))
  jvmArgumentProviders.add(new CommandLineArgumentProvider() {
      @Override
      Iterable<String> asArguments() {
        return shadowJarTask.map { ["-Ddatadog.smoketest.shadowJar.path=${it.archiveFile.get()}"] }.get()
      }
    })
}
